<resources>
    <string name="app_name">Calculadora</string>
    <string name="resultado">Resultado:</string>
    <string name="historico">Historico:</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="x_2">X^2</string>
    <string name="x_1_2">X^(1/2)</string>
    <string name="clear">CLEAR</string>
    <string name="suma">+</string>
    <string name="resta">-</string>
    <string name="multiplicacion">X</string>
    <string name="division">/</string>
    <string name="on_off">ON/OFF</string>
    <string name="decimal">.</string>
    <string name="igual">=</string>
    <string name="borrar">BORRAR</string>
    <string name="inversa">1/X</string>
    <string name="coseno">COS</string>
    <string name="seno">SEN</string>
    <string name="tangente">TAN</string>
</resources>
